2003-07-26  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: fix for 2.91.66

	* libpp/profile.cpp: typo invoking an undefined behavior revealed
	  by gcc stl debug mode
	* libpp/profile.h: ensure we provide the right typedef to std::
	  for profile::const_iterator revealed by gcc stl debug mode at compile
	  time. The implementation is a bit tricky to work with old compiler
	* libpp/symbol_sort.cpp: compare must define a weak ordered relation
	  order, revealed by gcc stl debug mode.

2003-07-26  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/ui/oprof_start.base.ui:
	* gui/oprof_start.h:
	* gui/oprof_start.cpp: change UI to use the new counter allocation
	  API

	* libop/op_alloc_counter.h:
	* libop/op_alloc_counter.c:
	* utils/op_help.c: minor const-ness api change

2003-07-25  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: Restrict the search path.

2003-07-25  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.c: use tabulation

	* libop/op_events.c:
	* libop/op_events.h: find_event_by_name() new
	* utils/op_help.c: use find_event_by_name()

2003-07-24  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_help.c: make valgrind happy + minor cleanup

2003-07-24  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.h:
	* libop/op_alloc_counter.c: new file providing mapping from an event 
	  list to hardware counter number
	* utils/op_help.c: use the above api

2003-07-24  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_help.c: fix hardware counter allocation order

2003-07-23  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: comment out --base-dir mention

2003-07-23  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: remove mention of oprof_start_event

2003-07-23  John Levon  <levon@movementarian.org>

	* dae/oprofiled.c:
	* daemon/oprofiled.c: don't uselessly try to unlink
	non-existent lockfile

	* daemon/opd_image.c:
	* daemon/oprofiled.c: clean up buffer read messages
